--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,13 +14,16 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        distribution: 'zulu' # Use 'zulu' as the JDK distribution
-        java-version: '11'   # Specify the Java version you are using
+        distribution: 'zulu'
+        java-version: '11'
+
+    - name: Grant execute permissions for gradlew
+      run: chmod +x ./gradlew
 
     - name: Build with Gradle
       run: ./gradlew build
