--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,6 +27,10 @@ jobs:
       working-directory: ./Ultimit_X_O
       run: chmod +x gradlew
 
-    - name: Build with Gradle
+    - name: Display Gradle Version
       working-directory: ./Ultimit_X_O
-      run: ./gradlew build
+      run: ./gradlew --version
+
+    - name: Build with Gradle (Verbose)
+      working-directory: ./Ultimit_X_O
+      run: ./gradlew build --warning-mode all --stacktrace --info
