--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,20 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Debug - List all files recursively
-      run: find . -type f
+      - name: Debug - List all files recursively
+        run: find . -type f
 
-    - name: Set working directory to Ultimit_X_O
-      working-directory: ./Ultimit_X_O
-      run: echo "Changed working directory to Ultimit_X_O"
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
 
-    - name: Grant execute permissions for gradlew
-      working-directory: ./Ultimit_X_O
-      run: chmod +x gradlew
+      - name: Set working directory to Ultimit_X_O
+        working-directory: ./Ultimit_X_O
+        run: echo "Changed working directory to Ultimit_X_O"
 
-    - name: Build with Gradle
-      working-directory: ./Ultimit_X_O
-      run: ./gradlew build
+      - name: Grant execute permissions for gradlew
+        working-directory: ./Ultimit_X_O
+        run: chmod +x gradlew
+
+      - name: Verify Gradle Wrapper
+        working-directory: ./Ultimit_X_O
+        run: ./gradlew --version
+
+      - name: Build with Gradle
+        working-directory: ./Ultimit_X_O
+        run: ./gradlew build
