--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,17 +19,19 @@ jobs:
       - name: Debug - List all files recursively
         run: find . -type f
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
-        with:
-          api-level: 34
-          build-tools: 34.0.0
+
+      - name: Install SDK Dependencies
+        run: |
+          yes | sdkmanager --licenses
+          sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
       - name: Force UTF-8 Locale
         run: |
