--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Android Tests
 
 on:
   push:
@@ -9,57 +9,66 @@ on:
       - main
 
 jobs:
-  build:
+  test:
+    name: Run Android Tests
     runs-on: ubuntu-latest
 
     steps:
+      # ✅ Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Debug - List all files recursively
-        run: find . -type f
-
+      # ✅ Set up JDK 17 for Android SDK compatibility
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
+      # ✅ Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
 
+      # ✅ Install SDK Dependencies
       - name: Install SDK Dependencies
         run: |
           yes | sdkmanager --licenses
           sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
-      - name: Force UTF-8 Locale
-        run: |
-          export LANG=en_US.UTF-8
-          export LC_ALL=en_US.UTF-8
-
+      # ✅ Enable Gradle Daemon
       - name: Enable Gradle Daemon
         run: |
+          mkdir -p ~/.gradle
+          touch ~/.gradle/gradle.properties
           echo "org.gradle.daemon=true" >> ~/.gradle/gradle.properties
+          echo "org.gradle.jvmargs=-Dfile.encoding=UTF-8" >> ~/.gradle/gradle.properties
 
-      - name: Set working directory to Ultimit_X_O
-        working-directory: ./Ultimit_X_O
-        run: echo "Changed working directory to Ultimit_X_O"
-
+      # ✅ Grant execute permissions for gradlew
       - name: Grant execute permissions for gradlew
         working-directory: ./Ultimit_X_O
         run: chmod +x gradlew
 
+      # ✅ Clean Gradle Build Cache
       - name: Clean Gradle Build Cache
         working-directory: ./Ultimit_X_O
         run: |
           ./gradlew clean
           ./gradlew cleanBuildCache
 
-      - name: Verify Gradle Wrapper
+      # ✅ Run Unit Tests
+      - name: Run Unit Tests
         working-directory: ./Ultimit_X_O
-        run: ./gradlew --version
+        run: ./gradlew test --stacktrace
 
-      - name: Build with Gradle (Verbose)
+      # ✅ Run Instrumented Tests
+      - name: Run Instrumented Tests
         working-directory: ./Ultimit_X_O
-        run: ./gradlew build --stacktrace --debug
+        run: ./gradlew connectedAndroidTest --stacktrace
+
+      # ✅ Upload Test Reports
+      - name: Upload Test Reports
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: android-test-reports
+          path: ./Ultimit_X_O/app/build/reports/tests/
