--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,28 +14,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # ✅ Set up JDK 17 for Android SDK compatibility
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # ✅ Set up Android SDK
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
 
-      # ✅ Install SDK Dependencies
       - name: Install SDK Dependencies
         run: |
           yes | sdkmanager --licenses
           sdkmanager "platforms;android-34" "build-tools;34.0.0"
 
-      # ✅ Enable Gradle Daemon
       - name: Enable Gradle Daemon
         run: |
           mkdir -p ~/.gradle
@@ -43,32 +38,40 @@ jobs:
           echo "org.gradle.daemon=true" >> ~/.gradle/gradle.properties
           echo "org.gradle.jvmargs=-Dfile.encoding=UTF-8" >> ~/.gradle/gradle.properties
 
-      # ✅ Grant execute permissions for gradlew
       - name: Grant execute permissions for gradlew
         working-directory: ./Ultimit_X_O
         run: chmod +x gradlew
 
-      # ✅ Clean Gradle Build Cache
-      - name: Clean Gradle Build Cache
+      - name: Clean Build Cache
         working-directory: ./Ultimit_X_O
-        run: |
-          ./gradlew clean
-          ./gradlew cleanBuildCache
+        run: ./gradlew cleanBuildCache
 
-      # ✅ Run Unit Tests
+      - name: Clean Build
+        working-directory: ./Ultimit_X_O
+        run: ./gradlew clean
+
+      - name: Start Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          target: default
+          arch: x86_64
+          profile: Pixel_4
+          script: ./gradlew connectedAndroidTest --stacktrace --debug
+
       - name: Run Unit Tests
         working-directory: ./Ultimit_X_O
-        run: ./gradlew test --stacktrace
+        run: ./gradlew test --stacktrace --debug
 
-      # ✅ Run Instrumented Tests
       - name: Run Instrumented Tests
         working-directory: ./Ultimit_X_O
-        run: ./gradlew connectedAndroidTest --stacktrace
+        run: ./gradlew connectedAndroidTest --stacktrace --debug
 
-      # ✅ Upload Test Reports
       - name: Upload Test Reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: android-test-reports
-          path: ./Ultimit_X_O/app/build/reports/tests/
+          path: |
+            ./Ultimit_X_O/app/build/reports/tests/testDebugUnitTest/
+            ./Ultimit_X_O/app/build/reports/androidTests/connected/
