--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           yes | sdkmanager --licenses
           sdkmanager "platforms;android-34" "build-tools;34.0.0"
+          sdkmanager "system-images;android-30;default;x86_64"
 
       - name: Enable Gradle Daemon
         run: |
@@ -56,7 +57,8 @@ jobs:
           api-level: 30
           target: default
           arch: x86_64
-          profile: Pixel_4
+          profile: Nexus 5X
+          boot-timeout: 600
           script: ./gradlew connectedAndroidTest --stacktrace --debug
 
       - name: Run Unit Tests
