--- a/.github/workflows/android-tests.yml
+++ b/.github/workflows/android-tests.yml
@@ -2,7 +2,68 @@ name: Backend Tests
 
 on:
   workflow_dispatch: # Allows manual triggering
+  push:name: Android Tests
+
+on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  android-tests:
+    name: Run Android Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      ### 🛠️ Step 1: Checkout the Repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      ### 🛠️ Step 2: Set Up Java Environment
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      ### 🛠️ Step 3: Set Up Android SDK
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+
+      ### 🛠️ Step 4: Grant Execute Permissions to Gradle Wrapper
+      - name: Grant Execute Permissions to Gradle Wrapper
+        run: chmod +x ./gradlew
+
+      ### 🛠️ Step 5: Clean and Build the Project
+      - name: Clean and Build Project
+        run: ./gradlew clean build --stacktrace --debug
+
+      ### 🛠️ Step 6: Run Instrumented Tests
+      - name: Run Instrumented Tests on Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          target: google_apis
+          arch: x86_64
+          script: ./gradlew connectedAndroidTest --stacktrace --debug
+
+      ### 🛠️ Step 7: Upload Test Results
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: android-test-results
+          path: app/build/reports
+          if-no-files-found: warn
+
+      ### ✅ Step 8: Success Message
+      - name: Success
+        run: echo "✅ Android Tests Completed Successfully!"
+
     branches:
       - main
   pull_request:
