--- a/.github/workflows/android-tests.yml
+++ b/.github/workflows/android-tests.yml
@@ -1,4 +1,4 @@
-name: Android Tests
+name: Android CI
 
 on:
   push:
@@ -7,59 +7,33 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
-  android-tests:
-    name: Run Android Tests
+  build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: Ultimit_X_O
-
     steps:
-      ### Step 1: Checkout the Repository
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      ### Step 2: Set Up Java Environment
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: 'adopt'
+          java-version: '11'
 
-      ### Step 3: Set Up Android SDK
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
-
-      ### Step 4: Grant Execute Permissions to Gradle Wrapper
-      - name: Grant Execute Permissions to Gradle Wrapper
-        run: chmod +x ./gradlew
-
-      ### Step 5: Clean and Build the Project
-      - name: Clean and Build Project
-        run: ./gradlew clean build --stacktrace --debug
-
-      ### Step 6: Run Instrumented Tests
-      - name: Run Instrumented Tests on Android Emulator
-        uses: reactivecircus/android-emulator-runner@v2
+      - name: Cache Gradle files
+        uses: actions/cache@v2
         with:
-          api-level: 29
-          target: google_apis
-          arch: x86_64
-          script: ./gradlew connectedAndroidTest --stacktrace --debug
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      ### Step 7: Upload Test Results
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: android-test-results
-          path: app/build/reports
-          if-no-files-found: warn
+      - name: Build with Gradle
+        run: ./gradlew build
 
-      ### Step 8: Success Message
-      - name: Success
-        run: echo "Android Tests Completed Successfully!"
+      - name: Run unit tests
+        run: ./gradlew test
