--- a/.github/workflows/android-tests.yml
+++ b/.github/workflows/android-tests.yml
@@ -12,17 +12,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    defaults:
+      run:
+        working-directory: Ultimit_X_O
 
+    steps:
+      ### Step 1: Checkout Repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      ### Step 2: Set Up Java Environment
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
           java-version: '11'
 
-      - name: Cache Gradle files
+      ### Step 3: Cache Gradle Files
+      - name: Cache Gradle Files
         uses: actions/cache@v2
         with:
           path: |
@@ -32,8 +39,29 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      ### Step 4: Grant Execute Permissions to Gradle Wrapper
+      - name: Grant Execute Permissions to Gradle Wrapper
+        run: chmod +x ./gradlew
 
-      - name: Run unit tests
-        run: ./gradlew test
+      ### Step 5: Build the Project with Gradle
+      - name: Build with Gradle
+        run: ./gradlew build --stacktrace > build.log 2>&1
+
+      ### Step 6: Run Unit Tests
+      - name: Run Unit Tests
+        run: ./gradlew test --stacktrace > test.log 2>&1
+
+      ### Step 7: Upload Logs
+      - name: Upload Build and Test Logs
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: android-test-logs
+          path: |
+            build.log
+            test.log
+          if-no-files-found: warn
+
+      ### Step 8: Success Message
+      - name: Success
+        run: echo "Build and Tests Completed Successfully!"
