--- a/.github/workflows/android-tests.yml
+++ b/.github/workflows/android-tests.yml
@@ -2,31 +2,65 @@ name: Android CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout the code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Debug - List all files recursively
-      run: find . -type f
+    # Step 2: Set up JDK 11
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '11'
 
-    - name: Set working directory to Ultimit_X_O
-      working-directory: ./Ultimit_X_O
-      run: echo "Changed working directory to Ultimit_X_O"
+    # Step 3: Cache Gradle dependencies
+    - name: Cache Gradle dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
 
-    - name: Grant execute permissions for gradlew
-      working-directory: ./Ultimit_X_O
-      run: chmod +x gradlew
+    # Step 4: Grant execute permission for Gradle wrapper
+    - name: Grant execute permission for Gradle wrapper
+      run: chmod +x ./gradlew
 
+    # Step 5: Build and run Unit Tests
     - name: Build with Gradle
-      working-directory: ./Ultimit_X_O
       run: ./gradlew build
+
+    - name: Run Unit Tests
+      run: ./gradlew test
+
+    # Step 6: Run Instrumented UI Tests
+    - name: Run UI Tests
+      run: ./gradlew connectedAndroidTest
+      env:
+        ANDROID_SDK_ROOT: ${{ runner.tool_cache }}/android-sdk
+
+    # Step 7: Upload Test Results
+    - name: Upload Unit Test Results
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: unit-test-results
+        path: app/build/test-results/testDebugUnitTest/
+
+    - name: Upload UI Test Results
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: ui-test-results
+        path: app/build/outputs/androidTest-results/connected/
